# mcf

./: .gitignore  Dockerfile.api  Dockerfile.frontend  IMPROVEMENTS_SUMMARY.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
dev_scripts/: build_offline.sh
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: api.ts  store.ts
scripts/: query_db.py  schema.sql
src/mcf/: __init__.py
src/mcf/api/: __init__.py  auth.py  config.py  models.py  scheduler.py  server.py
src/mcf/api/llm/: __init__.py  anthropic_provider.py  factory.py  ollama_provider.py  openai_provider.py  provider.py
src/mcf/api/services/: __init__.py  matching_service.py  profile_service.py
src/mcf/cli/: __init__.py  cli.py
src/mcf/lib/: __init__.py  categories.py  display.py  serialization.py
src/mcf/lib/api/: __init__.py  client.py
src/mcf/lib/crawler/: __init__.py  crawler.py
src/mcf/lib/embeddings/: __init__.py  embedder.py  resume.py
src/mcf/lib/models/: __init__.py  job_detail.py  models.py  models_new.py
src/mcf/lib/pipeline/: __init__.py  incremental_crawl.py
src/mcf/lib/storage/: base.py  duckdb_store.py  postgres_store.py
src/testing/: crawler.py
